--- a/archive/Movie recommender system.ipynb
+++ b/archive/Movie recommender system.ipynb
@@ -1076,101 +1076,101 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4241</th>\n",
-       "      <td>[Drama]</td>\n",
-       "      <td>66025</td>\n",
+       "      <th>9</th>\n",
+       "      <td>[Action, Adventure, Fantasy]</td>\n",
+       "      <td>209112</td>\n",
+       "      <td>[dc comics, vigilante, superhero, based on com...</td>\n",
+       "      <td>Batman v Superman: Dawn of Justice</td>\n",
+       "      <td>Fearing the actions of a god-like Super Hero l...</td>\n",
+       "      <td>[Ben Affleck, Henry Cavill, Gal Gadot]</td>\n",
+       "      <td>[Zack Snyder]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4684</th>\n",
+       "      <td>[Music, Drama]</td>\n",
+       "      <td>40920</td>\n",
        "      <td>[independent film]</td>\n",
-       "      <td>Mooz-lum</td>\n",
-       "      <td>Thanks to a strict Muslim upbringing that larg...</td>\n",
-       "      <td>[Nia Long, Danny Glover, Evan Ross]</td>\n",
-       "      <td>[Qasim Basir]</td>\n",
+       "      <td>The Business of Fancydancing</td>\n",
+       "      <td>Seymour Polatkin is a successful, gay Indian p...</td>\n",
+       "      <td>[Evan Adams, Michelle St. John, Gene Tagaban]</td>\n",
+       "      <td>[Sherman Alexie]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1274</th>\n",
-       "      <td>[Action, Adventure, Drama, Thriller]</td>\n",
-       "      <td>15074</td>\n",
-       "      <td>[ski]</td>\n",
-       "      <td>Extreme Ops</td>\n",
-       "      <td>While filming an advertisement, some extreme s...</td>\n",
-       "      <td>[Devon Sawa, Bridgette Wilson, Rufus Sewell]</td>\n",
-       "      <td>[Christian Duguay]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3846</th>\n",
-       "      <td>[Horror, Comedy, Fantasy]</td>\n",
-       "      <td>765</td>\n",
-       "      <td>[deer, blood splatter, tape recorder, chainsaw...</td>\n",
-       "      <td>Evil Dead II</td>\n",
-       "      <td>Ash Williams and his girlfriend Linda find a l...</td>\n",
-       "      <td>[Bruce Campbell, Sarah Berry, Dan Hicks]</td>\n",
-       "      <td>[Sam Raimi]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4080</th>\n",
+       "      <th>1506</th>\n",
        "      <td>[Comedy]</td>\n",
-       "      <td>11624</td>\n",
-       "      <td>[transsexuality, perversity, sperm, orgasm, so...</td>\n",
-       "      <td>Everything You Always Wanted to Know About Sex...</td>\n",
-       "      <td>A collection of seven vignettes, which each ad...</td>\n",
-       "      <td>[Woody Allen, John Carradine, Lou Jacobi]</td>\n",
-       "      <td>[Woody Allen]</td>\n",
+       "      <td>87567</td>\n",
+       "      <td>[adoption, marriage, divorce, birth mother]</td>\n",
+       "      <td>The Big Wedding</td>\n",
+       "      <td>To the amusement of their adult children and f...</td>\n",
+       "      <td>[Robert De Niro, Diane Keaton, Katherine Heigl]</td>\n",
+       "      <td>[Justin Zackham]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3806</th>\n",
-       "      <td>[Drama]</td>\n",
-       "      <td>225235</td>\n",
-       "      <td>[alcohol, adultery, river, camping, province, ...</td>\n",
-       "      <td>The Geographer Drank His Globe Away</td>\n",
-       "      <td>Victor Sluzhkin signs on as a teacher of geogr...</td>\n",
-       "      <td>[Konstantin Khabenskiy, Elena Lyadova, Aleksan...</td>\n",
-       "      <td>[Aleksandr Veledinskiy]</td>\n",
+       "      <th>2983</th>\n",
+       "      <td>[Action, Horror, Thriller]</td>\n",
+       "      <td>316727</td>\n",
+       "      <td>[dystopia, sequel, legalized murder]</td>\n",
+       "      <td>The Purge: Election Year</td>\n",
+       "      <td>Two years after choosing not to kill the man w...</td>\n",
+       "      <td>[Elizabeth Mitchell, Frank Grillo, Mykelti Wil...</td>\n",
+       "      <td>[James DeMonaco]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1859</th>\n",
+       "      <td>[Animation, Family]</td>\n",
+       "      <td>20694</td>\n",
+       "      <td>[kids and family]</td>\n",
+       "      <td>Rugrats Go Wild</td>\n",
+       "      <td>Rugrats Go Wild is a 2003 crossover animated f...</td>\n",
+       "      <td>[E.G. Daily, Nancy Cartwright, Kath Soucie]</td>\n",
+       "      <td>[Norton Virgien, John Eng]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    genres      id  \\\n",
-       "4241                               [Drama]   66025   \n",
-       "1274  [Action, Adventure, Drama, Thriller]   15074   \n",
-       "3846             [Horror, Comedy, Fantasy]     765   \n",
-       "4080                              [Comedy]   11624   \n",
-       "3806                               [Drama]  225235   \n",
+       "                            genres      id  \\\n",
+       "9     [Action, Adventure, Fantasy]  209112   \n",
+       "4684                [Music, Drama]   40920   \n",
+       "1506                      [Comedy]   87567   \n",
+       "2983    [Action, Horror, Thriller]  316727   \n",
+       "1859           [Animation, Family]   20694   \n",
        "\n",
        "                                               keywords  \\\n",
-       "4241                                 [independent film]   \n",
-       "1274                                              [ski]   \n",
-       "3846  [deer, blood splatter, tape recorder, chainsaw...   \n",
-       "4080  [transsexuality, perversity, sperm, orgasm, so...   \n",
-       "3806  [alcohol, adultery, river, camping, province, ...   \n",
+       "9     [dc comics, vigilante, superhero, based on com...   \n",
+       "4684                                 [independent film]   \n",
+       "1506        [adoption, marriage, divorce, birth mother]   \n",
+       "2983               [dystopia, sequel, legalized murder]   \n",
+       "1859                                  [kids and family]   \n",
        "\n",
-       "                                                  title  \\\n",
-       "4241                                           Mooz-lum   \n",
-       "1274                                        Extreme Ops   \n",
-       "3846                                       Evil Dead II   \n",
-       "4080  Everything You Always Wanted to Know About Sex...   \n",
-       "3806                The Geographer Drank His Globe Away   \n",
+       "                                   title  \\\n",
+       "9     Batman v Superman: Dawn of Justice   \n",
+       "4684        The Business of Fancydancing   \n",
+       "1506                     The Big Wedding   \n",
+       "2983            The Purge: Election Year   \n",
+       "1859                     Rugrats Go Wild   \n",
        "\n",
        "                                               overview  \\\n",
-       "4241  Thanks to a strict Muslim upbringing that larg...   \n",
-       "1274  While filming an advertisement, some extreme s...   \n",
-       "3846  Ash Williams and his girlfriend Linda find a l...   \n",
-       "4080  A collection of seven vignettes, which each ad...   \n",
-       "3806  Victor Sluzhkin signs on as a teacher of geogr...   \n",
+       "9     Fearing the actions of a god-like Super Hero l...   \n",
+       "4684  Seymour Polatkin is a successful, gay Indian p...   \n",
+       "1506  To the amusement of their adult children and f...   \n",
+       "2983  Two years after choosing not to kill the man w...   \n",
+       "1859  Rugrats Go Wild is a 2003 crossover animated f...   \n",
        "\n",
        "                                                   cast  \\\n",
-       "4241                [Nia Long, Danny Glover, Evan Ross]   \n",
-       "1274       [Devon Sawa, Bridgette Wilson, Rufus Sewell]   \n",
-       "3846           [Bruce Campbell, Sarah Berry, Dan Hicks]   \n",
-       "4080          [Woody Allen, John Carradine, Lou Jacobi]   \n",
-       "3806  [Konstantin Khabenskiy, Elena Lyadova, Aleksan...   \n",
+       "9                [Ben Affleck, Henry Cavill, Gal Gadot]   \n",
+       "4684      [Evan Adams, Michelle St. John, Gene Tagaban]   \n",
+       "1506    [Robert De Niro, Diane Keaton, Katherine Heigl]   \n",
+       "2983  [Elizabeth Mitchell, Frank Grillo, Mykelti Wil...   \n",
+       "1859        [E.G. Daily, Nancy Cartwright, Kath Soucie]   \n",
        "\n",
-       "                         crew  \n",
-       "4241            [Qasim Basir]  \n",
-       "1274       [Christian Duguay]  \n",
-       "3846              [Sam Raimi]  \n",
-       "4080            [Woody Allen]  \n",
-       "3806  [Aleksandr Veledinskiy]  "
+       "                            crew  \n",
+       "9                  [Zack Snyder]  \n",
+       "4684            [Sherman Alexie]  \n",
+       "1506            [Justin Zackham]  \n",
+       "2983            [James DeMonaco]  \n",
+       "1859  [Norton Virgien, John Eng]  "
       ]
      },
      "execution_count": 23,
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "fa670bdd-869d-43bf-b2ee-b2292b5a60c2",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1530,7 @@
        "0  19995  Avatar  in the 22nd century, a paraplegic marine is di..."
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "id": "d2ee0a22-ad97-4d0e-9c68-79c2063ffd1f",
    "metadata": {},
    "outputs": [],
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "cc360e8f-84f8-4c5a-a2d4-5f847a7aff36",
    "metadata": {},
    "outputs": [],
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "7066b79f-6aab-4a66-92f1-bc7b5447c4b3",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "id": "7c9dc9dd-1aff-4ef6-a917-6e01f8a313d1",
    "metadata": {},
    "outputs": [],
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "id": "b8290e92-5bc8-4258-9cb7-576baa05e311",
    "metadata": {},
    "outputs": [],
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 38,
    "id": "6674e1b8-4d06-4c5a-9839-96ad91e72a86",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1627,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 39,
    "id": "ad4cef3a-52e8-4268-a4dc-7d23e20ff9d4",
    "metadata": {},
    "outputs": [
@@ -1648,7 +1648,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 40,
    "id": "2ea416c6-d8b4-4cff-b4b0-ead8c01e1a1c",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,9 +1680,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc95b2a5-16ad-4837-bd79-43453cbd0385",
+   "metadata": {},
+   "source": [
+    "Our data is 5000 dimensional. So for the recommendation we will take the closed vectors.\n",
+    "But Euclidean distance is not a good measure for multi dimensional vectors. So we take the cosine distance between them.   \n",
+    "Cosine distance means the theta angle between the vectors. For our project the distance is inversely proportional to the \n",
+    "similarity between the movies. We use the cosine similarity function () as it gives value between 0 and 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5a722cc7-4198-4b04-9979-5e9b2d2f1e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "39ac5df4-8535-4656-9513-ec3de4591a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity=cosine_similarity(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "990f92a3-cfad-4000-ae81-4877ea4db92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1214, np.float64(0.29061909685954823)),\n",
+       " (2405, np.float64(0.2726248784031353)),\n",
+       " (3728, np.float64(0.26401000024165)),\n",
+       " (507, np.float64(0.25903973506580724)),\n",
+       " (539, np.float64(0.2537477434955704))]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#this code goves the index and similarity score of the given movie with other \n",
+    "#top five movies\n",
+    "sorted(list(enumerate( similarity[0])),reverse=True,key=lambda x:x[1])[1:6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dacf193c-d13a-466b-9986-278401d4e10f",
+   "metadata": {},
+   "source": [
+    "Now we have to make a function that  when gets a movie gives\n",
+    "the list of five similar movies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e5ff6d6a-5262-460a-b18b-47c76503684d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommended(movie):\n",
+    "    movie_index=new[new['title']==movie].index[0]    \n",
+    "    distance=similarity[movie_index]\n",
+    "    movies_list=sorted(list(enumerate(distance)),reverse=True,key=lambda x:x[1])[1:6]\n",
+    "\n",
+    "    for i in movies_list:\n",
+    "        print(new.iloc[i[0]].title)\n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "176ab21f-a56c-4e83-a187-fd10349510a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aliens vs Predator: Requiem\n",
+      "Aliens\n",
+      "Falcon Rising\n",
+      "Independence Day\n",
+      "Titan A.E.\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommended('Avatar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "b3e64ce9-e667-4027-8edc-6743ba99e4d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Autumn in New York'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.iloc[1216].title"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0332a9-d4a7-4732-9001-5848c62c305c",
+   "id": "a326bdb6-74c4-48fd-9cbf-6273d30d7c3c",
    "metadata": {},
    "outputs": [],
    "source": []
